@@ -23,7 +23,6 @@ sub opt_spec {
     return (
         [ 'description=s' => 'Description of the initial stack'             ],
         [ 'no-default'    => 'Do not mark the initial stack as the default' ],
-        [ 'no-history'    => 'Do not record stack history'                  ],
         [ 'source=s@'     => 'URL of upstream repository (repeatable)'      ],
     );
 }
@@ -129,19 +128,6 @@ If you choose not to mark the default stack, then you'll be required
 to specify the C<--stack> option for most commands.  You can always
 mark (or unmark) the default stack by at any time by using the
 L<default|App::Pinto::Command::default> command.
-
-
-=item --no-history
-
-!! THIS OPTION IS EXPERIMENTAL !!
-
-Do not record the state of the stack at each revision.  This makes
-the database smaller and faster.  But it also means you'll never be 
-able to revert, reset, or diff a stack with a prior revision.  
-However, log messages will still be recorded and can be displayed as 
-usual.  This option should only be used if creating an archival 
-repository where you don't really care about the changes in each revision 
-(for example, tracking all of BackPAN or CPAN in a Pinto repository).
 
 
 =item --source=URL
